--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Conduit</title>
+    <title>ReactJs Project by Conduit</title>
   </head>
   <body>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
